Correciones menores en la interfaz base de los repositorios

--- a/ejemplo/ejemplo.csproj
+++ b/ejemplo/ejemplo.csproj
@@ -58,8 +58,14 @@
     <Compile Include="CustomControls\BindablePasswordBox.xaml.cs">
       <DependentUpon>BindablePasswordBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\IBaseRepository.cs" />
     <Compile Include="Models\IUserRepository.cs" />
+    <Compile Include="Models\ModeloAsistencia.cs" />
+    <Compile Include="Models\ModeloDepartamento.cs" />
+    <Compile Include="Models\ModeloEmpleado.cs" />
+    <Compile Include="Models\ModeloPuesto.cs" />
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Repositories\RepositorioDepartamento.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\userRepository.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
