Actualizacion de los modelos, falta completar el repositorio Puesto

--- a/ejemplo/ejemplo.csproj
+++ b/ejemplo/ejemplo.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Models\ModeloPuesto.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Repositories\RepositorioDepartamento.cs" />
+    <Compile Include="Repositories\RepositorioPuesto.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\userRepository.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
